--- a/app/src/main/res/layout/activity_imc.xml
+++ b/app/src/main/res/layout/activity_imc.xml
@@ -278,4 +278,18 @@
         android:layout_marginLeft="10dp"
         app:layout_constraintTop_toBottomOf="@id/cardView7"
         app:layout_constraintStart_toStartOf="parent"/>
+
+    <Button
+        android:id="@+id/volverdeimc"
+        android:text="VOLVER"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        app:layout_constraintTop_toBottomOf="@+id/calcular"
+        android:gravity="center"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="30dp"
+        app:cornerRadius="2dp">
+    </Button>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
