--- a/app/src/main/res/layout/activity_main_adri.xml
+++ b/app/src/main/res/layout/activity_main_adri.xml
@@ -270,10 +270,11 @@
 
 
         <Button
-            android:id="@+id/volver"
+            android:id="@+id/volveratras"
             android:text="VOLVER"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="90dp"
             android:layout_marginTop="30dp"
             app:cornerRadius="2dp">
         </Button>
