--- a/app/src/main/res/layout/activity__main.xml
+++ b/app/src/main/res/layout/activity__main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/fondomenu"
-    tools:context=".Main_Activity">
+    tools:context=".Activity_main">
 
 
     <LinearLayout
